--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,12 @@ services:
     environment:
       POSTGRES_DB: blog
       POSTGRES_USER: chook
-      POSTGRES_PASSWORD: passletter
+      POSTGRES_PASSWORD: passwd
+      PGDATA: /var/lib/postgresql/data/pgdata
     ports:
       - "5432:5432"
+    volumes:
+      - db-data:/var/lib/postgresql/data/pgdata
+
+volumes:
+  db-data:
