--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ click==8.1.3
 Flask==2.2.2
 Flask-Migrate==4.0.4
 Flask-SQLAlchemy==3.0.3
+Flask-WTF==1.1.1
 greenlet==2.0.2
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -20,3 +21,4 @@ sqlalchemy-stubs==0.4
 tomli==2.0.1
 typing_extensions==4.4.0
 Werkzeug==2.2.2
+WTForms==3.0.1
